--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@strapi/plugin-cloud": "4.22.0",
+    "@strapi/plugin-color-picker": "^4.22.0",
     "@strapi/plugin-i18n": "4.22.0",
     "@strapi/plugin-users-permissions": "4.22.0",
     "@strapi/strapi": "4.22.0",
@@ -19,6 +20,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-plugin-multi-select": "^1.2.3",
+    "strapi-provider-upload-do": "^3.6.9",
     "styled-components": "5.3.3"
   },
   "author": {
